[package]
name = "cw20-legacy"
version = "0.2.0"
authors = ["Mohammadsadegh Najafi <MSNTCS@users.noreply.github.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 compliant token compatible with Columbus-4 token"
license = "Apache-2.0"
repository = "https://github.com/terra-money/cosmwasm-contracts"
homepage = "https://www.terra.money/"
documentation = "https://github.com/terra-money/cosmwasm-contracts/blob/bombay/contracts/terra-cw20/README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = {version = "0.8.0" }
cw2 = {version = "0.8.0" }
cw20 = { version = "0.8.0"}
cw20-base = { version = "0.8.0"}
cw-storage-plus = { version = "0.8.0"}
cosmwasm-storage = { version = "0.16.0" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
