[package]
name = "terra-cw20"
version = "0.7.0"
authors = ["Mohammadsadegh Najafi <MSNTCS@users.noreply.github.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 compliant token compatible with Columbus-4 token"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = {version = "0.7.0" }
cw2 = {version = "0.7.0" }
cw20 = { version = "0.7.0"}
cw20-base = { version = "0.7.0"}
cw-storage-plus = { version = "0.7.0", features = ["iterator"]}
cosmwasm-storage = { version = "0.15.0", features = ["iterator"] }
cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "0.15.0" }
